[gd_scene load_steps=6 format=3 uid="uid://der1r8332tu38"]

[ext_resource type="Texture2D" uid="uid://ds1bwu2mibiqf" path="res://icon.png" id="1"]
[ext_resource type="Script" path="res://fang.gd" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(30, 30)

[sub_resource type="CircleShape2D" id="3"]
radius = 70.0

[sub_resource type="CircleShape2D" id="2"]
radius = 175.0

[node name="CharacterBody2D" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("2")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.4, 0.4)
position_smoothing_enabled = true
position_smoothing_speed = 3.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Attack" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Attack"]
shape = SubResource("3")

[node name="Attract" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Attract"]
shape = SubResource("2")

[connection signal="body_entered" from="Attack" to="." method="_on_Attack_body_entered"]
[connection signal="body_exited" from="Attack" to="." method="_on_Attack_body_exited"]
[connection signal="body_entered" from="Attract" to="." method="_on_Attract_body_entered"]
[connection signal="body_exited" from="Attract" to="." method="_on_Attract_body_exited"]
